--- a/proyecto formulario/index.html
+++ b/proyecto formulario/index.html
@@ -53,7 +53,7 @@
                         <option value="3">Three</option>
                       </select>   
                  </div>
-                <div class="mb-3 col-3">
+                <div class="mb-3 col-4">
                     <label for="exampleFormControlInput1" class="form-label">postal code</label>
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
                 </div>
@@ -79,8 +79,10 @@
             </div>
       </div>
             <div class="send">
-                <button type="button" class="btn btn-secondary">cancel</button>
-                <button type="button" class="btn btn-primary">send</button>
+                <div class="boton">
+                    <button type="button" class="btn btn-secondary">cancel</button>
+                    <button type="button" class="btn btn-primary">send</button>
+                </div>
             </div>
     </div>
 
