--- a/proyecto formulario/index.html
+++ b/proyecto formulario/index.html
@@ -1,91 +1,118 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
     <title>proyecto formulario</title>
 </head>
+
 <body>
-    <div class="box">
-        <div>
-            <h1>payment for example</h1>
-        </div>
-      <div class="cuerpo">
-        <div class="alert alert-danger" role="alert">
-            some fields are missing
-        </div>
-            <div class="row justify-content-between">
-                    <div class="mb-3 col-5">
-                        <label for="exampleFormControlInput1" class="form-label">Card #</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="XXXXXXXXXXXXXXXX">
-                    </div>
-                    <div class="mb-3 col-3">
-                        <label for="exampleFormControlInput1" class="form-label">CVC #</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="00000000">
-                    </div>
-                    <div class="mb-3 col-4">
-                        <label for="exampleFormControlInput1" class="form-label">Amount $</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Amount">
-                    </div>
-            </div>
-            <div class="row justify-content-between">
-                <div class="mb-3 col-7">
-                    <label for="exampleFormControlInput1" class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
-                </div>
-                <div class="mb-3 col-5">
-                    <label for="exampleFormControlInput1" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
-                </div>
-            </div>
-            <div class="row justify-content-between">
-                <div class="mb-3 col-5">
-                    <label for="exampleFormControlInput1" class="form-label">City</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
-                </div>
-                <div class="mb-3 col-3">
-                    <p>state</p>
-                    <select class="form-select form-select-sm" aria-label="Small select example" id="state">
-                        <option selected>select a state</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>   
-                 </div>
-                <div class="mb-3 col-4">
-                    <label for="exampleFormControlInput1" class="form-label">postal code</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
-                </div>
-            </div>
-            <div class="row justify-content-between">
-                <p>we accept:</p>
-                <div class="mb-3 col-3">
-                <div class=" bg-secondary" role="group" aria-label="Basic example" id="botones">
-                   <input type="radio" class="pago">
-                   <label for="pago"><i class="fa-brands fa-cc-mastercard"></i></label>
-                   <input type="radio" class="pago">
-                   <label for="pago"><i class="fa-brands fa-cc-visa"></i></label>
-                   <input type="radio" class="pago">
-                   <label for="pago"><i class="fa-brands fa-cc-diners-club"></i></label>
-                   <input type="radio" class="pago">
-                   <label for="pago"><i class="fa-brands fa-cc-amex"></i></label>
-                 </div>
-                </div>
-                 <div class="mb-3 col-5">
-                    <label for="exampleFormControlTextarea1" class="form-label">message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                  </div>
-            </div>
+  <div class="container mt-5 border border-1 p-0 main-container">
+    <div class="card text-start">
+      <div class="card-header" style="font-size: 40px;">
+        Payment form example
       </div>
-            <div class="send">
-                <div class="boton">
-                    <button type="button" class="btn btn-secondary">cancel</button>
-                    <button type="button" class="btn btn-primary">send</button>
-                </div>
+      <div class="container">
+        <div class="alert alert-danger mt-2" role="alert">
+          Some fields are missing
+        </div> 
+        <div class="justify-content-center align-content-center mt-4">
+          <form class="row g-3">
+            <div class="col-sm-4">
+              <label for="inputCardNumber" class="form-label">Card #</label>
+              <input type="text" class="form-control" id="inputCardNumber" placeholder="XXXXXXXXXXXXXXX" />
             </div>
+            <div class="col-sm-4">
+              <label for="inputCVC" class="form-label">CVC #</label>
+              <input type="text" class="form-control" id="inputCVC" placeholder="0000" />
+            </div>
+            <div class="col-sm-4">
+              <label for="Amount" class="form-label">Amount $</label>
+              <input type="text" class="form-control" id="Amount" placeholder="Amount" />
+            </div>
+
+            <div class="col-6">
+              <label for="inputFirstName" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="inputFirstName" />
+            </div>
+            <div class="col-6">
+              <label for="inputLastName" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="inputLastName" />
+            </div>
+
+            <div class="col-md-6">
+              <label for="inputCity" class="form-label">City</label>
+              <input type="text" class="form-control" id="inputCity" />
+            </div>
+
+            <div class="col-md-3">
+              <label for="inputState" class="form-label">State</label>
+              <select id="inputState" class="form-select">
+                <option selected>Pick a state</option>
+                <option>...</option>
+              </select>
+            </div>
+
+            <div class="col-md-3">
+              <label for="inputZip" class="form-label">Postal Code</label>
+              <input type="text" class="form-control" id="inputZip" />
+            </div>
+            <div class="col-4 bg-secondary ms-3 card-borders flex-grow-1" style="max-width: 250px; max-height: 27px">
+              <div class="d-flex flex-row align-items-center justify-content-center">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                    value="option1" />
+                  <label class="form-check-label" for="inlineRadio1"><i class="fa-brands fa-cc-mastercard text-white"></i></label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                    value="option2" />
+                  <label class="form-check-label" for="inlineRadio2"><i class="fa-brands fa-cc-visa text-white"></i></label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                    value="option3" />
+                  <label class="form-check-label" for="inlineRadio3"><i class="fa-brands fa-cc-visa text-white"></i></label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
+                    value="option4" />
+                  <label class="form-check-label" for="inlineRadio4"><i class="fa-brands fa-cc-visa text-white"></i></label>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-0 d-flex justify-content-end">
+              <div class="mb-3 flex-grow-1 ms-5">
+                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+
+                <div class="row">
+                  <p style="padding-left: 2; opacity: 75%">
+                    Add any notes here.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-0"></div>
+
+     
+
+          </form>
+        </div>
+      </div>
     </div>
 
+    <div class="row send">
+      <div class="card-footer text-body-secondary d-flex justify-content-end py-2 pe-4">
+        <button type="button" class="btn btn-secondary me-1">Cancel</button>
+        <button type="button" class="btn btn-primary me-1 " id="sendButton">Send</button>
+      </div>
+    </div>
+  </div>
+  
 
 
 
@@ -94,26 +121,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
